<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhone">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="2">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/manufacturer"
                android:id="@+id/etykieta_manufacturer"/>

            <EditText
                android:id="@+id/manufactorer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/model"
                android:id="@+id/etykieta_model"/>

            <EditText
                android:id="@+id/model_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/android_version"
                android:id="@+id/etykieta_version"/>

            <EditText
                android:id="@+id/version_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/website"
                android:id="@+id/etykieta_website"/>

            <EditText
                android:id="@+id/website_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/website"
                android:id="@+id/website_button"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel_button"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_button"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>